# agentgym

./: .env.example  .gitignore  DEVELOP.md  Makefile  README.md  config.py  pyproject.toml  run_evaluation.py
.github/: copilot-instructions.md
app/: logfire_util.py  reporting.py  utils.py
frameworks/pydantic_ai/: agent.py
frameworks/pydantic_ai/fruit_count/: agent.py
frameworks/pydantic_ai/towers_of_hanoi/: agent.py
frameworks/pydantic_ai_enhanced/enhanced/: enhanced_bedrock_model.py
frameworks/pydantic_ai_enhanced/fruit_count/: agent.py
frameworks/pydantic_ai_openai/fruit_count/: agent.py
frameworks/pydantic_ai_openai/towers_of_hanoi/: agent.py
frameworks/raw_openai_api/fruit_count/: agent.py
frameworks/raw_openai_api/towers_of_hanoi/: agent.py
frameworks/strands/: agent.py
frameworks/strands/fruit_count/: agent.py
puzzles/fruit_count/: checker.py  tools.py
puzzles/towers_of_hanoi/: checker.py  tools.py
scripts/: change-email.sh  include_replace.py
