[project]
name = "agentgym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.39.2",
    "jinja2>=3.1.6",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[bedrock,openai]>=0.2.18",
    "strands-agents>=0.2.0",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "openai>=1.93.0",
    "aiohttp>=3.12.13",
    "logfire>=3.22.0",
]
